# fb2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: parse_sample.rs
examples/books/: churchill_trial.fb2
src/: error.rs  lib.rs  parser.rs
tests/: common.rs  non_standard_genres.rs  parse_complex.rs  parse_many_bodies.rs  parse_minimal.rs
tests/resources/: complex.fb2  many_bodies.fb2  minimal.fb2  non_standard_genres.fb2
