[package]
name = "fb2"
version = "0.4.2"
authors = ["Руслан Глазков <glazkov@skiff.com>"]
description = "Parser of the FB2 format"
readme = "README.md"
homepage = "https://github.com/r-glazkov/fb2"
repository = "https://github.com/r-glazkov/fb2"
keywords = ["fb2"]
categories = ["parser-implementations"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
language-tags = { version = "0.3", features = ["serde"] }
quick-xml = { version = "0.30", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
